[package]
name = "contributor_registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "20.5.0"
notification_interface = { path = "../notification_interface" }

[dev-dependencies]
soroban-sdk = "20.5.0"

[features]
